--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 NEXT_REPLICATE_API_TOKEN=r8_6orUVd0QQiYoWYjtCEl6Ny4CYFNmyNF1P1GBB
 
-NEXT_PUBLIC_SERVER_URL = https://dressmeup.netlify.app
+NEXT_PUBLIC_SERVER_URL = https://dressmeup.render.com
 
 
 NEXT_PUBLIC_SUPABASE_URL=https://ikftaqbvfeyzuhobaiia.supabase.co
